--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
-<!DOCTYPE html>
+<!DOCcatalogo de filmes html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>projeto 1 ano Gregorio</title>
+    <title></title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
