--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>alura flex</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <header>
+<h1>flex</h1>
 
+  </header>  
 
 
 
