--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header class="cabeçalho">
 <h1>flex</h1>
-
+  <img class="cabeçalho-imagem"
   </header>  
 
 
