--- a/index.html
+++ b/index.html
@@ -7,13 +7,29 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <header class="cabeçalho">
 <h1>flex</h1>
   <img class="cabeçalho-imagem"
-  </header>  
+  </header>
+
+
+<section class="quem somos">
+  
+<p class="quem-somos-texto">QUEM SOMOS ? somos um site que entrega melhores filmes e series atuais antigas filmes sempre disponiveis de catalogos , com filmes infantis para crianças e adultos </p>
 
 
 
+
+
+
+
+
+
+
+
+
+</section>
 
 
 
