--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header class="cabeçalho">
 <h1>flex</h1>
-  <img class="cabeçalho-imagem"
+  <img src="logo.png" alt="imagem de logo">
   </header>
 
 
