--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <section class="quem somos">
   
 <p class="quem-somos-texto">QUEM SOMOS ? somos um site que entrega melhores filmes e series atuais antigas filmes sempre disponiveis de catalogos , com filmes infantis para crianças e adultos </p>
-img
+<img src=""
 
 
 
