--- a/index.html
+++ b/index.html
@@ -13,21 +13,10 @@
   <img src="logo.png" alt="imagem de logo">
   </header>
 
-
-<section class="quem somos">
+<section class="quem-somos">
   
 <p class="quem-somos-texto">QUEM SOMOS ? somos um site que entrega melhores filmes e series atuais antigas filmes sempre disponiveis de catalogos , com filmes infantis para crianças e adultos </p>
-<img src=""
-
-
-
-
-
-
-
-
-
-
+<img class="quem-somos-imagem" src="cinema.jpg" alt="imagem de cinema">
 
 </section>
 
